!fix body overflow

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -13,6 +13,11 @@ h4,
 h5 {
   color: #333333;
 }
+
+body {
+  overflow-y: scroll;
+}
+
 .templ {
   background: #dfe4bd;
 }
